c-services.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP  # ✅ No external exposure needed
